--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,7 +4,7 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: QO Research Group # Website name
-baseURL: 'https://example.com/' # Website URL
+baseURL: 'https://maxmkmk.github.io/hugo/' # Website URL
 
 ############################
 ## LANGUAGE
