--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,16 +4,16 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Tour
+  - name: ttour
     url: tour
     weight: 10
-  - name: News
+  - name: nnews
     url: post
     weight: 20
-  - name: People
+  - name: ppPeople
     url: people
     weight: 30
-  - name: Events
+  - name: Eeevents
     url: event
     weight: 40
   - name: Publications
